[gd_scene load_steps=3 format=3 uid="uid://e8jv4qm4pl42"]

[ext_resource type="Script" path="res://Assets/Player/Weapons/IceSpear/ice_spear.gd" id="1_fs2jy"]
[ext_resource type="PackedScene" uid="uid://c64vcfy75htnr" path="res://Assets/Utility/Weapons/projectile_spawner.tscn" id="2_u5fkj"]

[node name="IceSpear" type="Node2D"]
script = ExtResource("1_fs2jy")

[node name="ProjectileSpawner" parent="." instance=ExtResource("2_u5fkj")]

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
